@@ -1,4 +1,5 @@
 
+ o Oper: fixed bug with function [intersect]: now use G.E.compare instead of (=)
  o fixed "make install-findlib"
 
 version 1.7, February 23, 2011
